--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.6",
